--- a/build.xml
+++ b/build.xml
@@ -43,6 +43,7 @@
                 <pathelement path="lib/JFlex.jar"/>
                 <pathelement path="lib/cup_v10k.jar"/>
                 <pathelement path="lib/log4j-1.2.17.jar"/>
+                <pathelement path="lib/symboltable-1-1.jar"/>
             </classpath>
         </javac>
     </target>
