--- a/build.xml
+++ b/build.xml
@@ -44,10 +44,19 @@
                 <pathelement path="lib/cup_v10k.jar"/>
                 <pathelement path="lib/log4j-1.2.17.jar"/>
                 <pathelement path="lib/symboltable-1-1.jar"/>
+                <pathelement path="lib/mj-runtime-1.1.jar"/>
             </classpath>
         </javac>
     </target>
     <target name="run" depends="compile">
         <java classpath="${out}:lib/*" classname="Main" fork="true"/>
+    </target>
+    <target name="disasm">
+        <java classname="rs.etf.pp1.mj.runtime.disasm">
+            <arg value="test/program.obj"/>
+            <classpath>
+                <pathelement location="lib/mj-runtime-1.1.jar"/>
+            </classpath>
+        </java>
     </target>
 </project>
